<resources>
    <!-- Базовое -->
    <string name="app_name">Weather</string>
    <string name="settings">Settings</string>
    <string name="error">Error</string>
    <string name="my_location">My Location</string>
    <string name="favorites">Favorites</string>
    <string name="feels_like">feels like</string>
    <string name="now">Now</string>
    <string name="today">Today</string>
    <string name="forecast_today">Hourly forecast</string>
    <string name="forecast_week">Forecast for the week</string>
    <string name="current_location">Current location</string>
    <string name="use_current_location">Use current location</string>
    <string name="add_location">Add location</string>
    <string name="add_error">The place has already been saved</string>
    <string name="place_name">Place name</string>
    <string-array name="days_of_week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>

    <!-- Настройки -->
    <string name="basic_settings">Basic</string>
    <string name="appearance_settings">Appearance</string>
    <string name="theme">Design style</string>
    <string name="select_theme">Select a design style</string>
    <string name="select_units_of_meansurement">Select units of meansurement</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="notifications">Notifications</string>
    <string name="receive_notifications">Receive notifications</string>
    <string name="get_notification">Get notifications about tomorrow\'s weather forecast</string>
    <string name="default_location">Default location</string>
    <string name="units_of_meansurement">Units of meansurement</string>
    <string name="not_selected">Not selected</string>
    <string name="no_saved_places">There are no saved places</string>
    <string name="theme_change">A reboot is required to change the theme</string>

    <!-- Погодные параметры -->
    <string name="temperature">Temperature</string>
    <string name="wind_power">Wind power</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="precipitation">Precipitation</string>
    <string name="daylight_hours">Daylight hours</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string-array name="cardinal_directions">
        <item>N</item>
        <item>NE</item>
        <item>E</item>
        <item>SE</item>
        <item>S</item>
        <item>SW</item>
        <item>W</item>
        <item>NW</item>
    </string-array>
    <!-- Погода -->
    <string name="clear_sky">Clear sky</string>
    <string name="mostly_clear_sky">Mostly clear sky</string>
    <string name="partly_cloudy">Partly cloudy</string>
    <string name="overcast">Overcast</string>
    <string name="fog">Fog</string>
    <string name="light_drizzle">Light drizzle</string>
    <string name="drizzle">Drizzle</string>
    <string name="heavy_drizzle">Heavy drizzle</string>
    <string name="freezing_drizzle">Freezing drizzle</string>
    <string name="light_rain">Light rain</string>
    <string name="rain">Rain</string>
    <string name="heavy_rain">Heavy rain</string>
    <string name="freezing_rain">Freezing rain</string>
    <string name="light_snow">Light snow</string>
    <string name="snow">Snow</string>
    <string name="snow_grains">Snow grains</string>
    <string name="heavy_snow">Heavy snow</string>
    <string name="light_rain_shower">Light rain shower</string>
    <string name="rain_shower">Rain shower</string>
    <string name="heavy_rain_shower">Heavy rain shower</string>
    <string name="snow_shower">Snow shower</string>
    <string name="heavy_snow_shower">Heavy snow shower</string>
    <string name="thunderstorm">Thunderstorm</string>
    <string name="hail">Hail</string>
    <string name="heavy_hail">Heavy hail</string>
    <string name="unknown">Unknown</string>

    <!-- Единицы измерения -->
    <string name="millimeters">mm</string>
    <string name="mm_of_mercury">Mm of mercury</string>
    <string name="hPa">hPa</string>
    <string name="meters_per_second">m/s</string>
    <string name="kilometers_per_hour">k/h</string>
    <string name="miles_per_hour">miles/h</string>
    <string name="celsius">Celsius (C°)</string>
    <string name="fahrenheit">Fahrenheit (F°)</string>
</resources>